--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -4,7 +4,7 @@ title: Contact Us
 permalink: /contact/
 image: /assets/images/contact.jpg
 ---
-<p class="mb-5">Strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream and, as I lie close to the earth, a thousand unknown plants are noticed by me.<br><br>When I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable forms of the insects and flies, then I feel the presence of the Almighty, who formed us in his own image, and the breath of that universal love which bears and sustains.</p>
+<p class="mb-5">Informações:</p>
 
 <form action="https://formspree.io/{{ site.contact-form }}" method="POST" class="row">
   <div class="col-lg-6">
