--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ layout: default
               {% else %}
               {% assign categories = page.categories %}
               {% endif %}
-              {% for category in categories %}
-              <p class="text-uppercase">{{category}}</p>
+              {% for category in post.categories %}
+              <a class="d-block mb-3 text-white text-uppercase" href="{{ 'category/' | relative_url }}{{ category | slugify }}">{{ category }}</a>
               {% endfor %}
               <h4 class="card-title mb-4"><a class="text-white" href="{{ post.url | relative_url }}">{{post.title}}</a></h4>
               <a class="btn btn-outline-light" href="{{ post.url | relative_url }}">read more</a>
@@ -51,9 +51,9 @@ layout: default
 					{% else %}
 					{% assign categories = page.categories %}
 					{% endif %}
-					{% for category in categories %}
-					<p class="text-uppercase mb-2">{{category}}</p>
-					{% endfor %}
+					{% for category in post.categories %}
+          <a class="d-block mb-3 text-dark text-uppercase" href="{{ 'category/' | relative_url }}{{ category | slugify }}">{{ category }}</a>
+          {% endfor %}
           <h4 class="title-border"><a class="text-dark" href="{{ post.url | prepend: site.baseurl }}">{{post.title}}</a></h4>
           <p>{{ post.content | strip_html | truncatewords: 35 }}</p>
           <a href="{{ post.url | prepend: site.baseurl }}" class="btn btn-transparent">read more</a>
